Fix slide on mobile and pinkbox

--- a/app/assets/stylesheets/_home.sass
+++ b/app/assets/stylesheets/_home.sass
@@ -5,7 +5,7 @@ $triangle: false
 #home
 
   .call
-    bottom: 7%
+    top: 70%
     position: absolute
     text-align: center
     width: 100%
@@ -21,10 +21,12 @@ $triangle: false
       padding: 0
 
     img
-      position: absolute
-      width: 100%
-      height: 100%
       z-index: 0
+      @media only screen and (min-width: 769px)
+        width: 100%
+        height: 100%
+
+
 
 
     /* Topbar home */
@@ -144,13 +146,21 @@ $triangle: false
           text-transform: uppercase
           font-weight: normal
 
+      .pinkbox
+        top: 70%
+        position: absolute
+        text-align: center
+        z-index: 9999
+        width: 100%
+
       .subscribe
         background: #e8525d
-        margin: 40px 0
         padding: 10px
         color: white
         text-align: center
-        margin-top: 75%
+        width: 350px
+        margin: 0 auto
+
         .space
           margin: 10px 0
           display: block
